[package]
name = "bevy_pixelperfect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", default_features = false, features = ["bevy_winit", "x11"] }
pixels = "0.9"
image = "0.24.1"
