[package]
name = "bevy_pixelperfect"
version = "0.1.0"
edition = "2021"
author = "Ofri Kirshen <okirshen@gmail.com>"
description = "Bevy Pixels integration"
license = "MIT"
repository = "https://github.com/Okirshen/bevy_pixelperfect"

[dependencies]
bevy = { version = "0.6.1", default_features = false, features = ["bevy_winit", "x11"] }
pixels = "0.9"
image = "0.24.1"
